istioctl/cmd/testdata/authz/converter/policy-ignore-no-clusterRbacConfig.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: productpage
  namespace: default
spec:
  rules:
    - services: ["productpage.default.svc.cluster.local"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding
  namespace: default
spec:
  subjects:
    - user: "user"
  roleRef:
    kind: ServiceRole
    name: "productpage"
